--- a/src/src/app/app.component.html
+++ b/src/src/app/app.component.html
@@ -1,5 +1,15 @@
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+
+    <ul class="navbar-nav">
+        <li class="nav-item"></li>
+        <a routerLink="ProductsList" routerLinkActive="active" class="nav-link">Lista de productos</a>
+    </ul>
+
+</nav>
+
+
 <h1 class="text-center">{{title}}</h1>
 
 <div class="container">
-    <app-products></app-products>
+    <router-outlet></router-outlet>
 </div>
